@@ -29,9 +29,9 @@ import java.nio.file.Paths
 
 val scalacVersion = "2.13.15"
 // source version of the Java language
-val javaVersion = "21"
+val javaVersion = "24"
 // version of the GraalVM JDK
-val graalVersion = "21.0.2"
+val graalVersion = "24.0.1"
 // Version used for the Graal/Truffle related Maven packages
 // Keep in sync with GraalVM.version. Do not change the name of this variable,
 // it is used by the Rust build script via regex matching.
@@ -223,6 +223,16 @@ ThisBuild / javacOptions ++= Seq(
   "-g",               // Include debugging information
   "-Xlint:unchecked", // Enable additional warnings
   "-proc:full"        // Annotation processing is enabled
+)
+
+ThisBuild / javaOptions ++= Seq(
+  // Needed for migration from JDK 21 to JDK 24
+  // See https://github.com/oracle/graal/blob/master/sdk/CHANGELOG.md#version-2420
+  "--enable-native-access=org.graalvm.truffle",
+  // Truffle calls terminally deprecated methods from sun.misc.Unsafe in JDK24.
+  // This removes the warnings at runtime.
+  // TODO: Remove this until JDK 26
+  "--sun-misc-unsafe-memory-access=allow"
 )
 
 ThisBuild / scalacOptions ++= Seq(
@@ -1633,6 +1643,7 @@ lazy val `task-progress-notifications` = project
   .enablePlugins(JPMSPlugin)
   .configs(Test)
   .settings(
+    frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     version := "0.1",
     compileOrder := CompileOrder.ScalaThenJava,
@@ -3074,7 +3085,7 @@ lazy val `runtime-integration-tests` =
         // Add necessary exports for IR module dumping to IGV
         // Which is used in the test utils
         val irDumperExports = Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             (`runtime-compiler-dump-igv` / javaModuleName).value
           )
         )
@@ -3487,7 +3498,7 @@ lazy val `runtime-compiler-dump` =
     .dependsOn(`runtime-parser`)
 
 /** This is a standalone project that is not compiled with Frgaal on purpose.
-  * It depends on jdk.internal.vm.compiler module, which cannot be included in Frgaal.
+  * It depends on jdk.graal.compiler module, which cannot be included in Frgaal.
   * It includes a service provider for service definition in `runtime-compiler-dump`.
   */
 lazy val `runtime-compiler-dump-igv` =
@@ -3508,7 +3519,7 @@ lazy val `runtime-compiler-dump-igv` =
       ),
       Compile / addExports ++= {
         Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             javaModuleName.value
           )
         )
@@ -3837,34 +3848,55 @@ lazy val `engine-runner` = project
           langServer ++
           epbLang
       ).distinct
-      val stdLibsJars =
-        `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `database-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `google-api-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `std-microsoft-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-snowflake-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-tableau-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath())
+      def stdLibsJars = {
+        val log = streams.value.log
+        val base =
+          `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath())
+        if (GraalVM.EnsoLauncher.fast) {
+          log.info(
+            s"Skipping support for non-Standard.Base libraries in the image build as ${GraalVM.EnsoLauncher.VAR_NAME} env variable is ${GraalVM.EnsoLauncher.toString}"
+          )
+          base
+        } else {
+          base ++
+          `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `database-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `google-api-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `std-microsoft-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-snowflake-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-tableau-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath())
+        }
+      }
       core ++ stdLibsJars ++ extraNITestLibs.value
     },
     extraNITestLibs := Def.taskDyn {
       if (GraalVM.EnsoLauncher.test) Def.task {
-        Seq(
+        val baseHelpers =
           (`enso-test-java-helpers` / Compile / packageBin).value
-            .getAbsolutePath(),
+            .getAbsolutePath()
+        val snowHelpers =
           (`snowflake-test-java-helpers` / Compile / packageBin).value
             .getAbsolutePath()
-        )
+        if (GraalVM.EnsoLauncher.fast) {
+          Seq(baseHelpers)
+        } else {
+          Seq(
+            baseHelpers,
+            snowHelpers
+          )
+        }
       }
       else {
         Def.task {
@@ -3959,6 +3991,7 @@ lazy val `engine-runner` = project
               "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
               "-H:+AddAllCharsets",
               "-H:+IncludeAllLocales",
+              "-H:+RunReachabilityHandlersConcurrently",
               // Workaround a problem with build-/runtime-initialization conflict
               // by disabling this service provider
               "-H:ServiceLoaderFeatureExcludeServiceProviders=net.snowflake.client.core.FileTypeDetector",
@@ -4176,7 +4209,8 @@ lazy val `test-utils` =
       libraryDependencies ++= GraalVM.modules,
       libraryDependencies ++= Seq(
         "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
-        "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided"
+        "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided",
+        "junit"               % "junit"                 % junitVersion
       ),
       Compile / javacOptions ++= Seq(
         "-s",
@@ -4822,13 +4856,18 @@ lazy val `std-base` = project
       val result = (Compile / packageBin).value
       val _ensureCoreIsCompiled =
         (`common-polyglot-core-utils` / Compile / packageBin).value
-      val _ = StdBits
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      StdBits
         .copyDependencies(
           `base-polyglot-root`,
           Seq("std-base.jar", "common-polyglot-core-utils.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = None
         )
-        .value
       result
     }
   )
@@ -4885,17 +4924,22 @@ lazy val `generic-jdbc-connection-spec-dependencies` = project
       "org.graalvm.polyglot" % "polyglot" % graalMavenPackagesVersion % "provided",
       "com.h2database"       % "h2"       % h2Version
     ),
-    Compile / packageBin := Def.task {
-      val result = (Compile / packageBin).value
-      val _ = StdBits
+    Compile / packageBin := {
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      StdBits
         .copyDependencies(
           file("test/Generic_JDBC_Tests/polyglot/java/"),
           Seq(),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = None
         )
-        .value
       result
-    }.value
+    }
   )
   .dependsOn(`std-base` % "provided")
   .dependsOn(`std-table` % "provided")
@@ -4984,22 +5028,27 @@ lazy val `std-table` = project
       "org.mockito"              % "mockito-core"            % mockitoJavaVersion        % Test,
       "org.mockito"              % "mockito-junit-jupiter"   % mockitoJavaVersion        % Test
     ),
-    Compile / packageBin := Def.task {
-      val result = (Compile / packageBin).value
+    Compile / packageBin := {
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `table-polyglot-root`,
           Seq("std-table.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = None
         )
-        .value
       result
-    }.value
+    }
   )
   .dependsOn(`std-base` % "provided")
 
-lazy val extractNativeLibs = taskKey[Unit](
-  "Helper task to extract native libraries from OpenCV JAR"
+lazy val extractNativeLibs = taskKey[AnalysisOfExtractedNativeLibs](
+  "Helper task to extract native libraries from a dependency JAR"
 )
 
 lazy val cleanPolyglotRoot = taskKey[Unit](
@@ -5024,33 +5073,49 @@ lazy val `std-image` = project
     // Extract native libraries from opencv.jar, and put them under
     // Standard/Image/polyglot/lib directory. The minimized opencv.jar will
     // be put under Standard/Image/polyglot/java directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev = extractNativeLibs.previous
+      StdBits
+        .copyDependencies(
+          `image-polyglot-root`,
+          Seq("std-image.jar", "opencv.jar"),
+          ignoreScalaLibrary = true,
+          ignoreDependency   = Some("org.openpnp" % "opencv" % opencvVersion),
+          libraryUpdates     = (Compile / update).value,
+          logger             = logger,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = prev
+        )
       StdBits
         .extractNativeLibsFromOpenCV(
           `image-polyglot-root`,
           `image-native-libs`,
-          opencvVersion
+          opencvVersion,
+          logger,
+          updateReport = (Compile / update).value,
+          moduleName.value,
+          scalaBinaryVersion.value,
+          cacheStoreFactory,
+          prev
         )
-      )
-      .dependsOn(
-        // Ensure dependencies are first copied.
-        StdBits
-          .copyDependencies(
-            `image-polyglot-root`,
-            Seq("std-image.jar", "opencv.jar"),
-            ignoreScalaLibrary = true,
-            ignoreDependency   = Some("org.openpnp" % "opencv" % opencvVersion)
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `image-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `image-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5079,14 +5144,19 @@ lazy val `std-generic-jdbc` = project
       "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided"
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `generic-jdbc-polyglot-root`,
           Seq("std-generic-jdbc.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5114,33 +5184,50 @@ lazy val `std-google-api` = project
     // Extract native libraries from grpc-netty-shaded-***.jar, and put them under
     // Standard/Google_Api/polyglot/lib directory. The minimized jar will
     // be put under Standard/Google_Api/polyglot/java directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev = extractNativeLibs.previous
+      StdBits
+        .copyDependencies(
+          `google-api-polyglot-root`,
+          Seq("std-google-api.jar"),
+          ignoreScalaLibrary = true,
+          ignoreDependencyIncludeTransitive =
+            Some(s"grpc-netty-shaded-${grpcVersion}"),
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = prev
+        )
       StdBits
         .extractNativeLibsFromGrpc(
           `google-api-polyglot-root`,
           `google-api-native-libs`,
-          grpcVersion
+          grpcVersion,
+          updateReport       = (Compile / update).value,
+          logger             = streams.value.log,
+          moduleName         = moduleName.value,
+          scalaBinaryVersion = scalaBinaryVersion.value,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = prev
         )
-      )
-      .dependsOn(
-        StdBits
-          .copyDependencies(
-            `google-api-polyglot-root`,
-            Seq("std-google-api.jar"),
-            ignoreScalaLibrary = true,
-            ignoreDependencyIncludeTransitive =
-              Some(s"grpc-netty-shaded-${grpcVersion}")
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `google-api-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `google-api-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5172,14 +5259,19 @@ lazy val `std-database` = project
       "org.postgresql"       % "postgresql"              % postgresVersion
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `database-polyglot-root`,
           Seq("std-database.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5209,14 +5301,19 @@ lazy val `std-aws` = project
       "software.amazon.awssdk" % "ssooidc"                 % awsJavaSdkV2Version
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-aws-polyglot-root`,
           Seq("std-aws.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5239,14 +5336,19 @@ lazy val `std-snowflake` = project
       "net.snowflake"    % "snowflake-jdbc-thin"     % snowflakeJDBCVersion exclude ("io.grpc", "grpc-xds")
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-snowflake-polyglot-root`,
           Seq("std-snowflake.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5269,14 +5371,19 @@ lazy val `std-microsoft` = project
       "com.microsoft.sqlserver" % "mssql-jdbc"              % mssqlserverJDBCVersion
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-microsoft-polyglot-root`,
           Seq("std-microsoft.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5385,34 +5492,60 @@ lazy val `std-tableau` = project
     ),
     // Extract native libraries from tableau's jar, and put them under
     // Standard/Tableau/polyglot/lib directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev               = extractNativeLibs.previous
+      val tableauSuffixInJar = s"tableauhyperapi-${StdBits.plainOsName()}"
+      val tableauNativeLibJar = (Compile / unmanagedJars).value
+        .map(_.data)
+        .filter(f => f.getName.contains(tableauSuffixInJar))
+        .head
+      val libraryUpdates     = (Compile / update).value
+      val unmanagedClasspath = (Compile / unmanagedJars).value
+      StdBits
+        .copyDependencies(
+          `std-tableau-polyglot-root`,
+          Seq("std-tableau.jar"),
+          ignoreScalaLibrary = true,
+          ignoreUnmanagedDependency =
+            Some(!_.getName.endsWith("tableauhyperapi.jar")),
+          libraryUpdates     = libraryUpdates,
+          logger             = logger,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = unmanagedClasspath,
+          previousRun        = prev
+        )
+
       StdBits
         .extractNativeLibsFromTableau(
           `std-tableau-polyglot-root`,
           `std-tableau-native-libs`,
           tableauVersion,
-          jnaVersion
+          jnaVersion,
+          updateReport       = libraryUpdates,
+          unmanagedClasspath = unmanagedClasspath,
+          logger             = logger,
+          moduleName         = moduleName.value,
+          scalaBinaryVersion = scalaBinaryVersion.value,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = prev
         )
-      )
-      .dependsOn(
-        StdBits
-          .copyDependencies(
-            `std-tableau-polyglot-root`,
-            Seq("std-tableau.jar"),
-            ignoreScalaLibrary = true,
-            ignoreUnmanagedDependency =
-              Some(!_.getName.endsWith("tableauhyperapi.jar"))
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `std-tableau-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `std-tableau-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5560,7 +5693,9 @@ ThisBuild / NativeImage.additionalOpts := {
     Seq()
   } else {
     var opts = if (GraalVM.EnsoLauncher.release) {
-      Seq("-O3")
+      // Picking `-Os` option instead of `-O3` in production on purpose.
+      // See https://github.com/enso-org/enso/pull/12855#issuecomment-2812552448
+      Seq("-Os")
     } else {
       Seq("-Ob")
     }
@@ -5838,7 +5973,7 @@ updateLibraryManifests := {
   val runtimeCp  = (`runtime` / Runtime / fullClasspath).value
   val fullCp     = (runnerCp ++ runtimeCp).distinct
   val modulePath = componentModulesPaths.value
-  val javaOpts = Seq(
+  val javaOpts = (ThisBuild / javaOptions).value ++ Seq(
     "--module-path",
     modulePath.map(_.getAbsolutePath).mkString(File.pathSeparator),
     "-m",
